# stock-cache

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yml  config.yml  pyproject.toml
docs/: architecture.md
docs/superpowers/plans/: 2026-03-30-stock-cache.md  2026-03-31-cache-maintenance-interfaces.md  (+6 more)
runtime/: default-indexes.csv
skills/: README.md
skills/stock-cache-read/: SKILL.md
skills/stock-cache-write/: SKILL.md
src/: cli.py  config.py
src/db/: init.py  pool.py  schema.sql
src/domain/: errors.py  models.py
src/providers/: tushare_adapter.py
src/repositories/: instruments.py  job_runs.py  market_data.py
src/services/: index_list.py  indicators.py  install_templates.py  installer.py  normalizer.py  retry.py  status_reporter.py
src/stock_cache/: cli.py  config.py
src/use_cases/: delete_by_date.py  install_skill.py  read_raw.py  read_screen.py  stats_date_range.py  write_market_data.py
tests/: conftest.py  test_cli.py  test_config.py  test_packaging.py
tests/integration/: test_cli_live.py  test_market_data_live.py  test_market_data_repository_live.py  test_postgres_smoke.py  test_write_market_data_live.py
tests/repositories/: test_instrument_repository.py  test_market_data_maintenance_repository.py  test_market_data_repository.py
tests/services/: test_indicators.py  test_install_templates.py  test_installer.py  test_normalizer.py  test_status_reporter.py
tests/use_cases/: test_delete_by_date.py  test_install_skill.py  test_read_raw.py  test_read_screen.py  test_stats_date_range.py  test_write_market_data.py
(+21 files in other folders)
