[project]
name = "stock-cache"
version = "0.1.0"
description = "A-share market data cache with PostgreSQL persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asyncpg>=0.30.0",
  "click>=8.0.0",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
  "tushare>=1.4.18",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
]

[project.scripts]
stock-cache = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
